tests/fixtures/type_checker/error/ref_before_declaration.galaxy
void ref_before_declaration()
{
    int a = b;
    int b;
}
